# auth-saas

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  package.json
data/: main.db
data/tenants/: tenant_9b82b8163d6f4e6f8c3293ff8236a281.db
docs/: admin-identity-bc.md  auth-bc.md  authentication-bounded-context.md  c4-auth-service.dsl  docker-service-deployment.md  federation-bc.md  federation-bounded-context.md  identity-bc.md  identity-bounded-context.md  messaging-bc.md  messaging-bounded-context.md  shared-bc.md  shared-module.md  tenancy-bc.md  vault-setup.md
migrations/: 202602200001_create_users_table.sql  202602280002_create_tenancy_tables.sql
proto/: authentication_verification.proto
src/: lib.rs  main.rs
src/iam/: mod.rs
src/iam/admin_identity/: mod.rs
src/messaging/application/: mod.rs
src/messaging/domain/: error.rs
src/messaging/interfaces/: mod.rs
src/provisioning/application/: mod.rs
src/provisioning/domain/: error.rs  mod.rs
src/provisioning/interfaces/: mod.rs
src/shared/: mod.rs
src/shared/infrastructure/: circuit_breaker.rs  mod.rs
src/tenancy/: lib.rs
src/tenancy/application/: mod.rs
src/tenancy/domain/: error.rs  mod.rs
src/tenancy/infrastructure/: mod.rs  schema_initializer.rs  (+1 more)
tests/: integration_tests.rs
tests/iam/: mod.rs
tests/messaging/: email_sender_test.rs  mod.rs
tests/provisioning/: mod.rs  provisioning_service_test.rs
tests/shared/: circuit_breaker_test.rs  mod.rs
tests/tenancy/: mod.rs  tenant_query_service_test.rs  tenant_service_test.rs
(+343 files in other folders)
