[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json" ], default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.19", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bcrypt = "0.17.1"
hickory-resolver = "0.24"
redis = { version = "0.27", features = ["tokio-comp"] }
jsonwebtoken = "9"
async-trait = "0.1"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.148"
urlencoding = "2.1"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "pool", "tracing"], default-features = false }
rand = { version = "0.9.2", features = ["std", "std_rng"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3.47"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
lazy_static = "1.5.0"
regex = "1.12.2"

[dev-dependencies]
mockall = "0.14.0"
